--- a/client/src/components/Card/Card.module.css
+++ b/client/src/components/Card/Card.module.css
@@ -2,12 +2,9 @@
     width: 90%;
     max-width: 120rem;
     margin: 1px auto;
-    background: rgba(104, 100, 100, 0.459);
+    background: rgba(0, 0, 0, 0.950);
     border-radius: 10%;
     padding: 18px 18px;
-    box-shadow: 3px -1px 50px -11px rgba(0, 0, 0, 1);
-    -webkit-box-shadow: 3px -1px 50px -11px rgba(0, 0, 0, 1);
-    -moz-box-shadow: 3px -1px 50px -11px rgba(0, 0, 0, 1);
 }
 .card:hover {
     transform: scale(0.9, 0.9);
@@ -27,7 +24,7 @@ p {
     border-radius: 10px;
 }
 .dietas {
-    background-color: darkgoldenrod;
+    background-color: rgb(146, 106, 5);
     height: 25px;
     border-radius: 24px;
     padding: 0.5px;
