--- a/client/src/components/Creation/Creation.module.css
+++ b/client/src/components/Creation/Creation.module.css
@@ -1,43 +1,42 @@
 .fondo {
     background: url(../../image/amari.jpg) no-repeat center fixed;
-    background-size: cover;
+    background-size:1080px 640px;
     height: 100vh;
-    width: 100vw;
-
-    /*Probar*/
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* position: relative; */
+    width: 100vw; 
 }
 
 .box {
-    width: 25vh;
-    height: 5vh;
+    margin-right: 880px;
+    width: 35vh;
+    height: 6vh;
     margin-top: 1.2vh;
     font-size: 20px;
-    color: red;
     text-align: center;
-    background: transparent;
-    border-color: red;
     transition: 0.19s linear;
     cursor: pointer;
+    color: rgba(219, 204, 204, 0.724);
+    background-color:rgb(43, 43, 43);
+    border:solid 2px goldenrod;
+    border-radius: 5px;
+    
 }
 .box:hover {
-    color: rgb(128, 0, 255);
-    border: none;
+    color: rgb(0, 0, 0);
+    background-color: darkgray
 }
 .boxes {
-    color: rgb(20, 40, 250);
+    color: rgba(219, 204, 204, 0.724);
+    background-color:rgb(43, 43, 43);
+    border:solid 2px goldenrod;
+    box-shadow: 0px 0px 5px 0px rgba(5, 5, 5, 0.637);
+    cursor: pointer;
+    transition: 0.4s linear;
     font-size: 20px;
     text-align: center;
-    background: transparent;
-    border: none;
-    transition: 0.5ms step-end;
-    cursor: pointer;
 }
 .boxes:hover {
-    color: rgb(115, 0, 255);
+    color: rgb(0, 0, 0);
+    background-color: darkgray
 }
 .fondoform {
     justify-content: center;
@@ -64,29 +63,29 @@
 .h2 {
     font-family: 'Verdana', sans-serif;
     font-size: 1.7rem;
-    color: rgba(48, 30, 9, 0.616);
+    color: rgba(245, 242, 237, 0.616);
+    padding-top:2px ;
+    padding-right: 270px;
 }
 .definicion {
-    font-family: 'Courier New', Courier, monospace;
-    text-decoration: underline;
+    font-family: cursive;
     font-weight: bold;
+    font-size: small;
+    color: rgb(10, 10, 10);
+    border: 1px double goldenrod;
+    box-shadow: black 25%;
+    background-color: rgb(99, 99, 99);
+    border-radius: 15%;
 }
 
 .definicion2 {
     font-family: 'Courier New', Courier, monospace;
-    text-decoration: underline;
     font-weight: bold;
     margin-right: 100%;
+    
 }
 .primero {
     padding: 10px;
-}
-.inputl {
-    margin: 3px;
-    padding: 5px 19px;
-    height: 90px;
-    width: 440px;
-    border: none;
 }
 .boxis {
     display: flex;
@@ -132,4 +131,15 @@
     font-size: 0.8rem;
     text-align: center;
     cursor: pointer;
+}
+
+.inputt {
+    background-color: rgb(175, 160, 123);
+}
+.inputl {
+    background-color: rgb(175, 160, 123);
+    margin: 3px;
+    padding: 5px 19px;
+    height: 90px;
+    width: 440px;
 }
