--- a/client/src/components/Error/Error.module.css
+++ b/client/src/components/Error/Error.module.css
@@ -1,30 +1,32 @@
 .error {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    margin-top: 30%;
+    display: inline-block;
+    margin-top: 10%;
 }
 .imagen {
     border-radius: 25%;
+    object-fit:scale-down;
+    padding-bottom: 900px; 
 }
 
 .box {
-    width: 15vh;
+    display: inline-block;
+    width: 25vh;
     height: 5vh;
-    margin-top: 24px;
-    margin-left: 40%;
-    /* margin-right: 10px; */
-    font-size: 20px;
-    color: red;
+    font-size:medium;
+    font-weight: bolder;
     text-align: center;
-    background: transparent;
-    border-radius: 18%;
-    transition: 0.15s linear;
+    transition: 0.19s linear;
     cursor: pointer;
-    border: none;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    box-sizing: content-box;
+    background-color: rgb(49, 49, 49);
+    color: black;
+    -moz-box-align: start;
+
 }
 .box:hover {
-    border: double;
-    color: rgb(6, 182, 68);
-    border-color: rgb(0, 183, 255);
+    color: rgb(0, 0, 0);
+    background-color: darkgray;
+    border-radius: 20%;
 }
