--- a/client/src/components/Home/Home.module.css
+++ b/client/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 html body {
-    background: url(../../image/amari.jpg) no-repeat center fixed;
-    background-size: cover;
+    background: url(../../image/fondodehome.webp) no-repeat center fixed;
+    background-size: 1150px 530px;
     height: 100vh;
     width: 100vw;
     display: inline-block;
@@ -8,7 +8,7 @@ html body {
 }
 .fondo {
     /*Probar*/
-    display: flex;
+    display: contents;
     justify-content: center;
     align-items: center;
 }
@@ -38,28 +38,26 @@ html body {
     /* margin-top: 24px;
     margin-right: 10px; */
     font-size: 20px;
-    color: red;
+    color: rgb(255, 253, 253);
     text-align: center;
-    background: transparent;
-    border-color: red;
     transition: 0.19s linear;
     cursor: pointer;
+    background-color:rgb(43, 43, 43);
+    border: ridge 2px goldenrod;
 }
 .box:hover {
-    color: rgb(128, 0, 255);
-    border: none;
+    color: rgb(0, 0, 0);
+    background-color: darkgray
 }
 .filt {
     display: flex;
-    border-top-right-radius: 20%;
-    border-top-left-radius: 20%;
+    border-radius: none;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.479);
+    background: rgba(0, 0, 0, 0.950);
 }
 .filt2 {
     display: flex;
-    border-bottom-right-radius: 30%;
-    border-bottom-left-radius: 30%;
+    border-radius: none;
     justify-content: center;
-    background: rgba(0, 0, 0, 0.479);
+    background: rgba(0, 0, 0, 0.950);
 }
