--- a/client/src/components/LandingPage/LandingPage.module.css
+++ b/client/src/components/LandingPage/LandingPage.module.css
@@ -1,30 +1,30 @@
 .fondo {
-    background: url(../../image/fondo2.webp) no-repeat center fixed;
-    background-size: cover;
-    height: 100vh;
-    width: 100vw;
-
-    /*Probar*/
+    background: url(../../image/Landinground.webp) no-repeat center fixed;
+    background-size: 1080px 540px;
+    background-position: center center;
+    height: 105vh;
+    width: 108vw;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .box {
-    width: 55vh;
-    height: 5vh;
-    margin-top: 8vh;
+    width: 75vh;
+    height: 10vh;
+    margin-top: 2vh;
+    margin-left: 15em;
     transition: 0.5s linear;
-    font-size: 30px;
+    font-size: 43px;
     text-align: center;
     background: transparent;
-    text-transform: uppercase;
-    font-weight: 900;
-    color: rgb(34, 255, 0);
+    font-family:cursive;
+    font-weight: 600;
+    color: rgb(240,250,175);
     cursor: pointer;
     border: none;
 }
 
 .box:hover {
-    color: aqua;
+    color: rgb(196, 156, 24);
 }
