--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,41 +1,45 @@
 .nav {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content:space-evenly;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px 0px rgba(237, 167, 123, 0.73);
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.73);
     width: 100%;
     height: 100%;
     padding-top: 2vh;
     padding-bottom: 2vh;
 }
 .btnB {
-    color: rgba(244, 30, 201, 0.724);
-    background-color: transparent;
-    border: none;
+    color: rgba(219, 204, 204, 0.724);
+    background-color:rgb(43, 43, 43);
+    border:solid 2px goldenrod;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px 0px rgba(99, 2, 254, 0.637);
-    font-family: 'Verdana', sans-serif;
+    box-shadow: 0px 0px 5px 0px rgba(5, 5, 5, 0.637);
+    font-family:cursive;
     font-size: 1rem;
     cursor: pointer;
     transition: 0.4s linear;
+    padding-left: 75px;
+    margin-left: -15px;
 }
 .btnB:hover {
-    color: rgb(234, 255, 0);
-    background-color: rgb(246, 170, 28);
+    color: rgb(0, 0, 0);
+    background-color: darkgray
 }
 .btnC {
-    color: rgba(244, 30, 201, 0.724);
-    background-color: transparent;
-    border: none;
+    color: rgba(219, 204, 204, 0.724);
+    background-color:rgb(43, 43, 43);
+    border:solid 2px goldenrod;
     border-radius: 5px;
-    box-shadow: 0px 0px 5px 0px rgba(99, 2, 254, 0.637);
-    font-family: 'Verdana', sans-serif;
+    box-shadow: 0px 0px 5px 0px rgba(5, 5, 5, 0.637);
+    font-family:cursive;
     font-size: 1rem;
     cursor: pointer;
     transition: 0.4s linear;
+    padding-right: 75px;
+    margin-left: 550px;
 }
 .btnC:hover {
-    color: rgb(0, 255, 106);
-    background-color: rgb(18, 4, 174);
+    color: rgb(0, 0, 0);
+    background-color: darkgray
 }
