--- a/client/src/components/Pagination/Pagination.module.css
+++ b/client/src/components/Pagination/Pagination.module.css
@@ -7,15 +7,16 @@
     list-style: none;
 }
 .span {
-    color: rgb(245, 244, 244);
-    padding: 7px;
-    background: rgb(53, 50, 50);
+    color: rgb(255, 241, 241);
+    background-color:rgb(19, 18, 18);
     margin: 2px;
     font-weight: 600;
     border-radius: 50%;
     cursor: pointer;
+    border:solid 2px rgb(121, 86, 5);
+    padding: 7px;
 }
 .span:hover {
-    color: black;
-    background-color: blanchedalmond;
+    color: rgb(0, 0, 0);
+    background-color: darkgray
 }
